--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,13 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter : postgresql
+  adapter : sqlite3
   pool : 5
   timeout: 5000
 
 development:
   <<: *default
-  adapter: mysql2
+  adapter: sqlite3
   encoding: utf8
   username: root
   password:
