--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,13 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter : sqlite3
+  adapter : postgresql
   pool : 5
   timeout: 5000
 
 development:
   <<: *default
-  adapter: sqlite3
+  adapter: mysql2
   encoding: utf8
   username: root
   password:
@@ -28,3 +28,4 @@ test:
 production:
   <<: *default
   database: tzn_production
+
