--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  isbn: MyString
-  title: MyString
-  authors: MyString
-  status: false
-  return_date: MyString
+  isbn: 1234
+  title: test
+  authors: tester
+  status: 1
+  return_date: 12/2/15
 
 two:
-  isbn: MyString
-  title: MyString
-  authors: MyString
-  status: false
-  return_date: MyString
+  isbn: 456
+  title: test2
+  authors: testing
+  status: 1
+  return_date: 3/12/15
